--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -12,3 +12,5 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: JetBrains/qodana-action@v4.1.0
+        with:
+          use-caches: false
