--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -1,6 +1,8 @@
 name: qodana
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -11,4 +13,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - uses: JetBrains/qodana-action@v4.0.0
+      - uses: JetBrains/qodana-action@v4.1.0
+        with:
+          use-caches: false
