--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -16,3 +16,10 @@ jobs:
       - uses: JetBrains/qodana-action@v4.1.0
         with:
           use-caches: false
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ${{ runner.temp }}/qodana/results/report
+          destination_dir: ./
